Added `LevelLoader` class to manage level loading and execution
- Created `LevelLoader` to handle loading levels from specified directories using `TileFactory`, `Player`, and other dependencies.
- Added `initialize` method to parse level files into `Level` objects; includes error handling for missing or inaccessible files.
- Implemented `run` method to execute each level sequentially, with a concluding message upon clearing all levels.
- Refactored `Level`, `Board`, and supporting classes for consistency:
  - Marked non-changing variables as `final` where applicable.
  - Simplified the `isLevelFinished` method in `Level` by using `isEmpty()` for better readability.
  - Updated `ActionInput` to normalize user input by converting to lowercase.
  - Fixed `cols` initialization in `Board` to use `getFirst()` for clarity and correctness.